<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">


    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="wallet_title"
        tools:layout_editor_absoluteY="567dp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/bar_gradient_wallet"
        app:layout_constraintBottom_toBottomOf="@+id/wallet_title"
        app:layout_constraintTop_toTopOf="@+id/wallet_title" />

    <TextView
        android:id="@+id/wallet_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:paddingTop="9dp"
        android:text="@string/wallet"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coin_dolr"
        android:layout_width="@dimen/coin_size"
        android:layout_height="@dimen/coin_size"
        android:layout_marginTop="16dp"
        android:src="@drawable/coin_dolr_large"
        app:layout_constraintEnd_toStartOf="@+id/coin_peny"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier" />

    <ImageView
        android:id="@+id/coin_peny"
        android:layout_width="@dimen/coin_size"
        android:layout_height="@dimen/coin_size"
        android:layout_marginTop="16dp"
        android:src="@drawable/coin_peny_large"
        app:layout_constraintEnd_toStartOf="@+id/coin_quid"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coin_dolr"
        app:layout_constraintTop_toTopOf="@+id/barrier" />

    <ImageView
        android:id="@+id/coin_quid"
        android:layout_width="@dimen/coin_size"
        android:layout_height="@dimen/coin_size"
        android:layout_marginTop="16dp"
        android:src="@drawable/coin_quid_large"
        app:layout_constraintEnd_toStartOf="@+id/coin_shil"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coin_peny"
        app:layout_constraintTop_toTopOf="@+id/barrier" />

    <ImageView
        android:id="@+id/coin_shil"
        android:layout_width="@dimen/coin_size"
        android:layout_height="@dimen/coin_size"
        android:layout_marginTop="16dp"
        android:src="@drawable/coin_shil_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coin_quid"
        app:layout_constraintTop_toTopOf="@+id/barrier" />

    <android.support.constraint.Placeholder
        android:id="@+id/placeholder_coin"
        android:layout_width="@dimen/coin_size"
        android:layout_height="@dimen/coin_size"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:barrierAllowsGoneWidgets="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier2"
        app:layout_constraintVertical_bias="0.04000002" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="coin_dolr,coin_shil,coin_quid,coin_peny"
        tools:layout_editor_absoluteY="567dp" />

    <TextView
        android:id="@+id/coin_currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="100dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_coin" />

    <include
        android:id="@+id/include_coins"
        layout="@layout/coins_in_wallet_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_currency_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/no_coin_of_selected_currency_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00d32f2f"
        android:padding="5dp"
        android:text="@string/no_coins_collected_of_selected_currency"
        android:textColor="#000"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/include_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_coins"
        app:layout_constraintVertical_bias="0.481" />

    <ImageView
        android:id="@+id/shadow_top"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:rotation="180"
        android:src="@drawable/shadow_downward_cast"
        app:layout_constraintBottom_toTopOf="@+id/include_coins"
        app:layout_constraintEnd_toEndOf="@+id/include_coins"
        app:layout_constraintStart_toStartOf="@+id/include_coins"
        app:layout_constraintTop_toBottomOf="@+id/coin_currency_name"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>