<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginSignupActivity">


...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login_form_title"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/login_signup_title_view"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:layout_marginTop="15dp"
...
        android:inputType="textEmailAddress"
        android:text=""
        android:textSize="16dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password_input_field"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/emai_confirm_input_field"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_action_passw"
...
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirm_input_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login_signup_button_text" />
...
