<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_bottom_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/wallet"/>

    <item android:id="@+id/nav_bottom_bank"
        android:icon="@drawable/ic_local_bank_24dp"
        android:title="@string/bank"/>

    <item android:id="@+id/nav_bottom_messenger"
        android:icon="@drawable/ic_iconmonstr_sms_3"
        android:title="@string/coin_messenger"/>

</menu>